--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,12 +32,13 @@
         "@fontsource/roboto": "^5.0.8",
         "@mui/icons-material": "^5.14.18",
         "@mui/material": "^5.14.18",
+        "axios": "^1.6.2",
         "openapi-fetch": "^0.8.2",
+        "path-browserify": "^1.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.20.0",
-        "zustand": "^4.4.6",
-        "axios": "^1.6.2"
+        "zustand": "^4.4.6"
     },
     "devDependencies": {
         "@babel/core": "latest",
@@ -50,6 +51,7 @@
         "@types/react-router-dom": "^5.3.3",
         "babel-loader": "latest",
         "css-loader": "^6.8.1",
+        "dotenv-webpack": "^8.0.1",
         "html-webpack-plugin": "latest",
         "openapi-typescript": "^6.7.1",
         "openapi-typescript-codegen": "^0.25.0",
