--- a/addNzbToMongo/package.json
+++ b/addNzbToMongo/package.json
@@ -22,15 +22,22 @@
     "engines": {
         "node": ">=20.0.0"
     },
-    "main": "index.js",
+    "main": "./build/main.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "ts-node src/main.ts",
+        "build": "tsc -p .",
+        "watch": "tsc -p . --watch",
+        "serve": "node dist/main.js"
     },
     "dependencies": {
+        "axios": "^1.6.3",
+        "dotenv": "^16.3.1",
         "fs": "^0.0.1-security",
         "mongodb": "^6.3.0"
     },
-        "devDependencies": {
-        "@types/node": "^20.9.2"
+    "devDependencies": {
+        "@types/node": "^20.10.6",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
     }
 }
